--- a/Challenger/Base.lproj/Main.storyboard
+++ b/Challenger/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Search-->
         <scene sceneID="rUc-q0-GXS">
             <objects>
                 <viewController id="jYm-l7-sw1" customClass="SearchUserViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
@@ -31,7 +31,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="735-wX-t6b" id="AQY-jZ-eHC">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="81"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="80.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSh-Dj-cGx">
@@ -82,25 +82,25 @@
                             <constraint firstItem="IlM-mS-PnZ" firstAttribute="bottom" secondItem="kdm-hY-ctE" secondAttribute="top" id="scB-M5-Ye5"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="pJO-3b-BpG"/>
+                    <tabBarItem key="tabBarItem" title="Search" id="pJO-3b-BpG" userLabel="search"/>
                     <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yho-c6-jmq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1512" y="-412"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Challenger Tab Bar View Controller-->
         <scene sceneID="pPv-ms-orC">
             <objects>
-                <tabBarController id="YrT-gH-NR1" sceneMemberID="viewController">
+                <tabBarController id="YrT-gH-NR1" customClass="ChallengerTabBarViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="bFF-aS-izi">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="JWp-VH-7Cb" kind="relationship" relationship="viewControllers" id="SJo-f3-cLu"/>
                         <segue destination="jYm-l7-sw1" kind="relationship" relationship="viewControllers" id="aiB-CD-sB3"/>
+                        <segue destination="TW0-Ft-PUw" kind="relationship" relationship="viewControllers" id="weo-VH-pDg"/>
                         <segue destination="PAB-ws-dWG" kind="relationship" relationship="viewControllers" id="fvB-VH-xSW"/>
                     </connections>
                 </tabBarController>
@@ -111,16 +111,13 @@
         <!--Title-->
         <scene sceneID="TKS-R0-J5U">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="JWp-VH-7Cb" customClass="ChallengePageViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="item " id="BGj-Cr-JmN"/>
-                    <navigationItem key="navigationItem" title="Title" id="vuB-wy-Szy"/>
-                    <connections>
-                        <segue destination="iox-ik-ekL" kind="presentation" identifier="toLoginVC" id="x9f-B4-Jfe"/>
-                    </connections>
-                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DH7-JN-YPc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="JWp-VH-7Cb" customClass="ChallengePageViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="item " id="BGj-Cr-JmN" userLabel="PVC"/>
+                    <navigationItem key="navigationItem" title="Title" id="vuB-wy-Szy"/>
+                </pageViewController>
             </objects>
-            <point key="canvasLocation" x="1512" y="285"/>
+            <point key="canvasLocation" x="1504" y="277"/>
         </scene>
         <!--Login Vew Controller-->
         <scene sceneID="p1u-XI-gn7">
@@ -285,7 +282,7 @@
             </objects>
             <point key="canvasLocation" x="1704" y="1056"/>
         </scene>
-        <!--Item yo-->
+        <!--Profile-->
         <scene sceneID="XiO-YN-2aC">
             <objects>
                 <viewController id="PAB-ws-dWG" customClass="ProfileViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
@@ -434,16 +431,16 @@
                             <constraint firstItem="T8O-tX-Ydb" firstAttribute="trailing" secondItem="phY-er-SNj" secondAttribute="trailing" id="y2s-Eo-LKZ"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item yo" id="2va-iu-Fzi"/>
+                    <tabBarItem key="tabBarItem" title="Profile" id="2va-iu-Fzi"/>
                     <connections>
                         <outlet property="pendingChallengesLabel" destination="ETT-hz-EoH" id="FYQ-v4-Wub"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PxA-yD-k08" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2377" y="1011"/>
+            <point key="canvasLocation" x="2357" y="1066"/>
         </scene>
-        <!--Challenge Prototype View Controller-->
+        <!--Challenges-->
         <scene sceneID="4OB-1g-i5c">
             <objects>
                 <viewController id="TW0-Ft-PUw" customClass="ChallengePrototypeViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
@@ -455,11 +452,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4ob-ID-Ufw">
-                                <rect key="frame" x="0.0" y="20" width="600" height="533"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4ob-ID-Ufw">
+                                <rect key="frame" x="0.0" y="20" width="600" height="440"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FOk-kp-Kqf">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="134"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="110"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMX-jl-XHy">
                                                 <rect key="frame" x="233" y="0.0" width="134" height="134"/>
@@ -468,7 +465,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PQF-Y0-5qE">
-                                        <rect key="frame" x="0.0" y="134" width="600" height="133"/>
+                                        <rect key="frame" x="0.0" y="110" width="600" height="110"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenge Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMb-uM-2m4">
                                                 <rect key="frame" x="104" y="32" width="392" height="69"/>
@@ -480,7 +477,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldN-xW-Ptw">
-                                        <rect key="frame" x="0.0" y="267" width="600" height="134"/>
+                                        <rect key="frame" x="0.0" y="220" width="600" height="110"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tix-hW-hpV">
                                                 <rect key="frame" x="104" y="32" width="392" height="69"/>
@@ -492,7 +489,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FsT-DO-kZC">
-                                        <rect key="frame" x="0.0" y="400" width="600" height="133"/>
+                                        <rect key="frame" x="0.0" y="330" width="600" height="110"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6R-ji-YQw">
                                                 <rect key="frame" x="121" y="52" width="150" height="50"/>
@@ -519,6 +516,10 @@
                             <constraint firstItem="XpZ-lX-Dt2" firstAttribute="top" secondItem="4ob-ID-Ufw" secondAttribute="bottom" constant="47" id="b8c-h8-hzJ"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Challenges" id="Qbx-Ni-4Oq"/>
+                    <connections>
+                        <segue destination="iox-ik-ekL" kind="presentation" identifier="toLoginVC" id="4w1-73-0kG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EhA-oe-49Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -544,6 +545,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="x9f-B4-Jfe"/>
+        <segue reference="tkc-o2-xFP"/>
     </inferredMetricsTieBreakers>
 </document>
